# extractous-benchmarks

./: .gitignore  README.md  benchmark.sh  plot_results.py  pyproject.toml
dataset/sec10-ground-truth/: 2022_Q3_AMZN.txt  2022_Q3_INTC.txt  2022_Q3_MSFT.txt  2022_Q3_NVDA.txt  2023_Q1_AAPL.txt  2023_Q1_AMZN.txt  2023_Q1_INTC.txt  2023_Q1_MSFT.txt  2023_Q1_NVDA.txt  2023_Q2_AAPL.txt  2023_Q2_AMZN.txt  2023_Q2_INTC.txt  2023_Q2_MSFT.txt  2023_Q2_NVDA.txt  2023_Q3_AAPL.txt  2023_Q3_AMZN.txt  2023_Q3_INTC.txt  2023_Q3_MSFT.txt  2023_Q3_NVDA.txt
docs/: README.md
results/pypdf-files_18_09_2024/: info.txt  memory_usage.csv  quality_scores.csv  timings.csv
results/sec10-filings_18_09_2024/: info.txt  memory_usage.csv  quality_scores.csv  timings.csv
src/: calc_similarity_score.py  run_extractous_stream.py  run_extractous_string.py  run_pypdf2.py  run_pypdfium2.py  run_unstructured.py  utils.py
