[tool.poetry]
name = "extractous-benchmarks"
version = "0.1.0"
description = ""
authors = ["nmammeri"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10.0,<3.13.0"
levenshtein = "^0.25.1"
unstructured = {extras = ["pdf"], version = "^0.15.12"}
memray = "^1.14.0"
pypdf = "^4.3.1"
pypdf2 = "^3.0.1"
matplotlib = "^3.9.2"
pymupdf = "^1.24.10"
extractous = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
